Add icon in navbar

--- a/css/app.css
+++ b/css/app.css
@@ -67,17 +67,6 @@ border-radius: 3px;
 }
 .click_item { cursor:pointer;}
 
-.header-search { display: inline-block;
-    float: right;
-    margin: 10px 0px;
-    background: #000; }
-
-.header-search input {
-background: rgba(255, 255, 255, 1);
-border: 1px solid rgba(134, 134, 134, 1);
-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.74) inset; padding: 4px 6px;
-}
-
 .header_dropdown {
 float: right;
 margin: 20px 0px;
@@ -174,19 +163,26 @@ textarea.edit_textarea{
 
 /* NAVBAR */
 .navbar {
-  background: #468EC6;
+  background: #2c3e50;
   color: white;
   border-bottom-color: #3F83B4;
 }
 .navbar-brand {
+  padding: 7px 15px;
   color: white !important;
   font-weight: 600;
+}
+.navbar-brand img {
+  height: 40px;
+  display: inline-block;
+  margin-right: 10px;
+  margin-top: -2px;
 }
 .navbar-inverse .navbar-toggle {
   border: 0 !important;
 }
 .navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus {
-  background-color: rgba(255, 255, 255, 0.2) !important;
+  background-color: rgba(255, 255, 255, 0.1) !important;
 }
 .navbar .nav li a {
   color: white !important;
@@ -196,7 +192,7 @@ textarea.edit_textarea{
   opacity: 0.7;
 }
 .navbar .nav li.active a, .navbar .nav li.active a:hover{
-  background-color: rgba(255, 255, 255, 0.2) !important;
+  background-color: rgba(255, 255, 255, 0.1) !important;
 }
 .header-search {
   background: transparent;
@@ -209,7 +205,7 @@ textarea.edit_textarea{
   padding-left: 15px;
   border: 0;
   box-shadow: none;
-  background: rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 0.1);
   border-radius: 5px;
   outline: none;
   color: white;
@@ -220,6 +216,7 @@ textarea.edit_textarea{
 }
 
 .header-refresh {
+  display: inline-block;
   height: 30px;
   width: 30px;
   color: white;
