--- a/css/app.css
+++ b/css/app.css
@@ -43,6 +43,14 @@ body {
     padding-right: 21px;
 }
 
+.btn-info {
+  background-color: #468EC6;
+  border-color: #1D658B;
+}
+.btn-success {
+  background-color: #78C157;
+  border-color: #568446;
+}
 .ng-table th.filter,  .ng-table th.filter .input-filter  { display:none;}
 
 .table  { margin:20px 0px ;}
@@ -58,22 +66,32 @@ body {
 .width-full { width:100%; display:inline-block; }
 .border-bottom:last-child{ border-bottom : none;}
 
-.cancel_button {
-display: inline-block;
-background: #E2E2E2;
-padding: 2px 7px;
-border: 1px solid #9E9E9E;
-border-radius: 3px;
+.cancel_button, .valid_button {
+  display: inline-block;
+  background: whitesmoke;
+  padding: 3px 7px;
+  border: 1px solid #9E9E9E;
+  border-radius: 3px;
+  vertical-align: bottom;
+  margin-top: -10px;
 }
+.cancel_button {
+  color: #e74c3c;
+}
+.valid_button {
+  color: #568446;
+}
+
 .click_item { cursor:pointer;}
 
 .header_dropdown {
-float: right;
-margin: 20px 0px;
-padding: 6px 10px;
+  float: right;
+  margin: 20px 0px 0px 0px;
+  padding: 6px 10px;
+  padding: 20px;
+  height: 28px;
 }
-.addBtn-row  {  display: inline-block;
-margin: 0px 0px 16px; }
+
 .label-div{
     display: block;
     margin: 10px 0px 0px;
@@ -105,57 +123,25 @@ margin: 0px 0px 16px; }
     border: 1px solid #5BC0DE;
     border-bottom: none;  }
 
-
-
 .addLabel_btn   i {
     margin: 0px 6px 0px 2px;  }
 .addLablel_div { margin:10px 0px; padding: 0px; }
 .addLablel_div .btn.btn-mini { margin:10px 0px}
 
 textarea.edit_textarea{
-    width: 800px;
-    height: 150px
+    width: 100%;
+    height: 100px
 }
-
-@media (max-width: 800px) {
-    .textarea.edit_textarea{ width: 700px;
-        height: 150px   }
-}
-
-@media (max-width: 700px) {
-    .textarea.edit_textarea{ width: 600px;
-        height: 150px   }
-}
-
-
-@media (max-width: 600px) {
-    .edit_textarea{ width: 500px;
-        height: 150px   }
-}
-
-
-
-@media (max-width: 500px) {
-    .textarea.edit_textarea{ width: 400px;
-        height: 150px   }
-}
-
-
-
-@media (max-width: 400px) {
-    .textarea.edit_textarea{ width: 300px;
-        height: 150px   }
-}
-
-
 
 .labelSection { width:100%; display: block;}
-.add_label_btn1{   position: relative;
+.add_label_btn1{
+    position: relative;
     right: 10px;
     float: right;
     z-index: 999;
     margin: -34px -9px !important;
-    display: inline-block; }
+    display: inline-block;
+  }
 .labelSection  .form-control:focus, .labelSection  .form-control:hover{ outline:none; box-shadow: none}
 
 
@@ -214,25 +200,33 @@ textarea.edit_textarea{
     color: #fff;
     opacity: 0.8;
 }
-
-.header-refresh {
-  display: inline-block;
-  height: 30px;
-  width: 30px;
-  color: white;
-  border-left: 1px solid rgba(255, 255, 255, 0.5);
-  padding-left: 15px;
-  margin-right: 15px;
-  margin-left: 5px;
-  margin-top: 10px;
-}
-.header-refresh a {
-  color: white;
-  font-size: 18px;
-}
 @media (max-width: 768px) {
     .header-search {
       float: left;
-      width: 90%;
+      width: 100%;
     }
+}
+
+.button-row {
+  float: right;
+  display: inline-block;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.button-row a {
+  margin-right: 10px;
+}
+
+
+/* TABLE */
+table thead tr {
+  border: 1px solid white;
+  border-bottom: 2px solid #468EC6;
+}
+table thead tr th {
+  border: 0 !important;
+  text-align: left !important;
+}
+table td {
+  word-break: break-all;
 }
