--- a/views/header.html
+++ b/views/header.html
@@ -65,11 +65,9 @@
 </div>
 
 
-<div class="row">
-    <div class="col-sm-12"></div>
+<div>
     <select class="btn-info header_dropdown" name="singleSelect" ng-model="selected_context"
             ng-change="changeContext(selected_context)">
         <option ng-repeat="c in contexts" value="{{c.name}}">{{c.name}}</option>
     </select>
-</div>
 </div>
