--- a/views/k8s/pods.html
+++ b/views/k8s/pods.html
@@ -14,8 +14,8 @@
    limitations under the License.
 -->
 <section ng-controller="podController as podc">
-    <div class="row" style="text-align: right">
-     <a class="addBtn-row"  ng-click="newPod=!newPod"><i class="btn btn-success fa fa-plus"> Create Pod </i></a>
+    <div class="button-row">
+     <a ng-click="newPod=!newPod"><i class="btn btn-success fa fa-plus"> Create Pod </i></a>
     </div>
 
     <div class="row">
@@ -29,8 +29,8 @@
                        name="yaml"
                         > YAML</span>
                 <br/>
-                <a class="cancel_button" ng-click="cancelCreateBtn();"><i class="glyphicon glyphicon-remove"> </i></a>
-                <button class="btn-small" type="submit"><i class="glyphicon glyphicon-ok"> </i></button>
+                <button class="btn cancel_button" ng-click="cancelCreateBtn();"><i class="glyphicon glyphicon-remove"> </i></button>
+                <button class="btn-small valid_button" type="submit"><i class="glyphicon glyphicon-ok"> </i></button>
 
             </form>
         </div>
