--- a/views/k8s/services.html
+++ b/views/k8s/services.html
@@ -14,8 +14,8 @@
    limitations under the License.
 -->
 <section ng-controller="servicesController as servicesco">
-    <div class="row" style="text-align: right" >
-        <a  class="addBtn-row"   ng-click="newService=!newService"><i class="btn btn-success fa fa-plus"> Create Service </i></a>
+    <div class="button-row">
+        <a ng-click="newService=!newService"><i class="btn btn-success fa fa-plus"> Create Service </i></a>
     </div>
 
     <div class="row">
@@ -28,9 +28,8 @@
                        name="yaml"
                         > YAML</span>
                 <br/>
-                <a class="cancel_button" ng-click="cancelCreateBtn();"><i class="glyphicon glyphicon-remove"> </i></a>
-                <button class="btn-small" type="submit"><i class="glyphicon glyphicon-ok"> </i></button>
-
+                <button class="btn cancel_button" ng-click="cancelCreateBtn();"><i class="glyphicon glyphicon-remove"> </i></button>
+                <button class="btn-small valid_button" type="submit"><i class="glyphicon glyphicon-ok"> </i></button>
             </form>
         </div>
     </div>
