--- a/css/app.css
+++ b/css/app.css
@@ -14,7 +14,8 @@
    limitations under the License.
 */
 body {
-    padding-top: 50px;
+    padding-top: 60px;
+    background: #E9E9E9;
 }
 #container {
     padding:0px 0px;
@@ -45,11 +46,11 @@ body {
 
 .btn-info {
   background-color: #468EC6;
-  border-color: #1D658B;
+  border-color: #4185B8;
 }
 .btn-success {
   background-color: #78C157;
-  border-color: #568446;
+  border-color: #6BAE4F;
 }
 .ng-table th.filter,  .ng-table th.filter .input-filter  { display:none;}
 
@@ -68,9 +69,9 @@ body {
 
 .cancel_button, .valid_button {
   display: inline-block;
-  background: whitesmoke;
+  background: white;
   padding: 3px 7px;
-  border: 1px solid #9E9E9E;
+  border: 1px solid lightgrey;
   border-radius: 3px;
   vertical-align: bottom;
   margin-top: -10px;
@@ -86,7 +87,7 @@ body {
 
 .header_dropdown {
   float: right;
-  margin: 20px 0px 0px 0px;
+  margin: 20px 0px;
   padding: 6px 10px;
   padding: 20px;
   height: 28px;
@@ -130,7 +131,8 @@ body {
 
 textarea.edit_textarea{
     width: 100%;
-    height: 100px
+    height: 100px;
+    border-color: lightgrey;
 }
 
 .labelSection { width:100%; display: block;}
@@ -147,12 +149,110 @@ textarea.edit_textarea{
 
 /*  ----- CUSTOM ----- */
 
+/* SIDEBAR */
+.sidebar {
+  position: fixed;
+  width: 200px;
+  height: 100%;
+  left: 0px; top: 0px;
+  background: #2c3e50;
+  border-right: 1px solid #263545;
+  -webkit-transition: all 0.5s ease;
+}
+.sidebar-header {
+  display: block;
+  width: 100%;
+  height: 80px;
+  padding: 20px 0px;
+}
+.sidebar-links {
+  margin-top: 20px;
+}
+.sidebar-link {
+  padding: 15px 10px;
+  padding-bottom: 10px;
+  font-weight: 300;
+  cursor: pointer;;
+  color: rgba(255, 255, 255, 0.7);
+  text-decoration: none;
+}
+.sidebar-link.active {
+  background: rgba(255,255,255,0.1);
+  color: white;
+  border-bottom: 1px solid rgba(255,255,255,0.1);
+  border-top: 1px solid rgba(255,255,255,0.1);
+}
+.sidebar-link:hover {
+  background: rgba(255,255,255,0.1);
+}
+.sidebar-link i.fa {
+  margin-right: 10px;
+}
+
+.sidebar:not(.open) {
+  left: -200px;
+}
+
+section.content {
+  -webkit-transition: all 0.5s ease;
+}
+.sidebarOpen section.content {
+  margin-left: 200px;
+}
+
+.sidebar-toggle {
+  display: block;
+  position: fixed;
+  bottom: 10px;
+  left: 15px;
+  font-size: 20px;
+  color: rgba(255, 255, 255, 0.5);
+  cursor: pointer;
+}
+.sidebar:not(.open) .sidebar-toggle {
+  color: rgba(0,0,0,0.5);
+}
+
 /* NAVBAR */
 .navbar {
-  background: #2c3e50;
+  -webkit-app-region: drag;
+  background: #468EC6;
   color: white;
+  height: 70px;
+  padding-top: 20px;
   border-bottom-color: #3F83B4;
+  -webkit-transition: all 0.5s ease;
 }
+.navbar .appbuttons {
+  position: absolute;
+  top: -12px;
+  left: -2px;
+}
+.navbar .container {
+  width: 100%;
+}
+.navbar ul.nav {
+  display: inline-block !important;
+}
+.navbar ul.nav.navbar-left {
+  min-width: 300px;
+}
+.navbar .navbar-brand {
+  margin-right: 30px;
+}
+.navbar .nav li {
+  display: inline-block;
+  cursor: pointer;
+  font-size: 20px;
+}
+.navbar .nav li a:hover, .navbar .nav li a:focus {
+  opacity: 0.6;
+  background: transparent;
+}
+.navbar .nav li a {
+  color: white;
+}
+
 .navbar-brand {
   padding: 7px 15px;
   color: white !important;
@@ -164,26 +264,13 @@ textarea.edit_textarea{
   margin-right: 10px;
   margin-top: -2px;
 }
-.navbar-inverse .navbar-toggle {
-  border: 0 !important;
-}
-.navbar-inverse .navbar-toggle:hover, .navbar-inverse .navbar-toggle:focus {
-  background-color: rgba(255, 255, 255, 0.1) !important;
-}
-.navbar .nav li a {
-  color: white !important;
-  font-weight: 200;
-}
-.navbar .nav li a:hover {
-  opacity: 0.7;
-}
-.navbar .nav li.active a, .navbar .nav li.active a:hover{
-  background-color: rgba(255, 255, 255, 0.1) !important;
-}
+
 .header-search {
   background: transparent;
   height: 35px;
-  margin: 7px 0px;
+  width: 300px;
+  margin: 7px 10px;
+  font-size: 16px !important;
 }
 .header-search input {
   width: 100%;
@@ -200,18 +287,11 @@ textarea.edit_textarea{
     color: #fff;
     opacity: 0.8;
 }
-@media (max-width: 768px) {
-    .header-search {
-      float: left;
-      width: 100%;
-    }
-}
 
 .button-row {
   float: right;
   display: inline-block;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin: 20px 0px;
 }
 .button-row a {
   margin-right: 10px;
@@ -219,6 +299,17 @@ textarea.edit_textarea{
 
 
 /* TABLE */
+
+.table-container {
+  background: white;
+  clear: both;
+  margin: 20px 0px;
+  padding: 10px;
+  padding-top: 0px;
+  border: 1px solid lightgrey;
+  border-radius: 4px;
+  overflow-x: scroll;
+}
 table thead tr {
   border: 1px solid white;
   border-bottom: 2px solid #468EC6;
@@ -229,4 +320,56 @@ table thead tr th {
 }
 table td {
   word-break: break-all;
+  min-width: 100px;
+}
+
+
+
+
+/* Close/Minimize/Fullscreen */
+
+.close-button {
+  margin-top: 17px;
+  margin-left: 10px;
+  height: 12px;
+  width: 12px;
+  background: url(../img/close-normal.svg);
+  background-size: 12px 12px;
+}
+
+.close-button:hover {
+  background: url(../img/close-hover.svg);
+  background-size: 12px 12px;
+}
+
+.minimize-button {
+  margin-top: 17px;
+  margin-left: 10px;
+  height: 12px;
+  width: 12px;
+  background: url(../img/min-normal.svg);
+  background-size: 12px 12px;
+}
+
+.minimize-button:hover {
+  background: url(../img/min-hover.svg);
+  background-size: 12px 12px;
+}
+
+.fullscreen-button {
+  margin-right: 15px;
+}
+
+.fullscreen-expand {
+  margin-top: 17px;
+  margin-left: 10px;
+  height: 12px;
+  width: 12px;
+  background: url(../img/max-normal.svg);
+  background-size: 12px 12px;
+}
+
+.fullscreen-expand:hover {
+  background: url(../img/max-hover.svg);
+  background-size: 12px 12px;
 }
