--- a/views/header.html
+++ b/views/header.html
@@ -13,55 +13,61 @@
    See the License for the specific language governing permissions and
    limitations under the License.
 -->
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+
+<div class="navbar navbar-inverse navbar-fixed-top" data-ng-class="{sidebarOpen:sidebarOpen}">
     <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#"><img src="img/icon.png"/>kUI</a>
-        </div>
-        <!--/.navbar-collapse -->
-        <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <!--<li data-ng-class="{active:isActive('/')}">-->
-                <!--<a href="#/">Home</a>-->
-                <!--</li>-->
-                <li data-ng-class="{active:isActive('/pods')}">
-                    <a href="#/pods">Pods</a>
-                </li>
-                <li data-ng-class="{active:isActive('/services')}">
-                    <a href="#/services">Services</a>
-                </li>
-                <li data-ng-class="{active:isActive('/rc')}">
-                    <a href="#/rc">Replication Controllers</a>
-                </li>
-                <li data-ng-class="{active:isActive('/context')}">
-                    <a href="#/context">Contexts</a>
-                </li>
-                <li data-ng-class="{active:isActive('/store')}" >
-                    <a href="#/store">Store</a>
-                </li>
-            </ul>
+        <ul class="nav navbar-nav appbuttons close-project" style="-webkit-app-region: no-drag">
+            <li class="pull-left closebutton close-button" draggable="false" onClick="win.close();"></li>
+            <li class="minimize-button" onClick="win.minimize();"></li>
+            <li class="fullscreen-button fullscreen-expand" onClick="win.toggleFullscreen();"></li>
+          </ul>
+        <ul class="nav navbar-left">
+          <a class="navbar-brand" href="#">
+            <img src="img/icon_white.png"/>
+            Skippbox
+          </a>
 
-            <ul class="nav navbar-right">
-              <!-- <li class="header-refresh">
-                <a ng-click="refresh()"><i class="fa fa-refresh"></i> </a>
-              </li> -->
-              <li class="header-search">
-                  <input type="text" ng-model="search" placeholder="search" ng-change="searchString(search);">
-              </li>
-            </ul>
-
-
-
-
-        </div>
-
+        </ul>
+        <ul class="nav navbar-right">
+          <li class="header-refresh" ng-click="refresh()">
+            <a><i class="fa fa-refresh"></i></a>
+          </li>
+          <li class="header-search">
+              <input type="text" ng-model="search" placeholder="search" ng-change="searchString(search);">
+          </li>
+        </ul>
     </div>
+</div>
+
+<div class="sidebar" data-ng-class="{open:sidebarOpen}">
+  <div class="sidebar-toggle" ng-click="toggleSidebar()">
+    <i class="fa" data-ng-class="sidebarOpen ? 'fa-caret-square-o-left' : 'fa-caret-square-o-right'"></i>
+  </div>
+
+  <div class="sidebar-header">
+
+  </div>
+  <div class="sidebar-links">
+    <a href="#/pods"><div class="sidebar-link" data-ng-class="{active:isActive('/pods')}">
+        <i class="fa fa-cube"></i>Pods
+    </div></a>
+    <a href="#/services"><div class="sidebar-link" data-ng-class="{active:isActive('/services')}">
+        <i class="fa fa-tasks"></i>Services
+    </div></a>
+    <a href="#/rc"><div class="sidebar-link" data-ng-class="{active:isActive('/rc')}">
+        <i class="fa fa-clone"></i>Replication Controllers
+    </div></a>
+    <a href="#/context"><div class="sidebar-link" data-ng-class="{active:isActive('/context')}">
+        <i class="fa fa-file-o"></i>Contexts
+    </div></a>
+    <a href="#/store"><div class="sidebar-link" data-ng-class="{active:isActive('/store')}" >
+        <i class="fa fa-building-o"></i>Store
+    </div></a>
+  </div>
+
+  <div class="sidebar-footer">
+
+  </div>
 </div>
 
 
