--- a/views/header.html
+++ b/views/header.html
@@ -23,8 +23,8 @@
           </ul>
         <ul class="nav navbar-left">
           <a class="navbar-brand" href="#">
-            <img src="img/icon_white.png"/>
-            Skippbox
+            <img class="icon" src="img/icon.png"/>
+            <img class="logo" src="img/logo.png"/>
           </a>
 
         </ul>
