--- a/views/header.html
+++ b/views/header.html
@@ -58,7 +58,7 @@
         <i class="fa fa-clone"></i>Replication Controllers
     </div></a>
     <a href="#/context"><div class="sidebar-link" data-ng-class="{active:isActive('/context')}">
-        <i class="fa fa-file-o"></i>Contexts
+        <i class="fa fa-file-o"></i>Endpoints
     </div></a>
     <a href="#/store"><div class="sidebar-link" data-ng-class="{active:isActive('/store')}" >
         <i class="fa fa-building-o"></i>Store
