--- a/views/store.html
+++ b/views/store.html
@@ -14,30 +14,27 @@
    limitations under the License.
 -->
 <section class="content" ng-controller="deployController as deployc">
-  <div class="button-row">
-    <a><i class="btn btn-success fa fa-plus"> Create Tree </i></a>
+
+  <div class="row">
+    <div class="col-sm-12">
+      <div
+        data-angular-treeview="true"
+        data-tree-model="newTree"
+        data-node-label="name"
+        data-node-children="children"
+      >
+      </div>
   </div>
 
-  <div class="row table-container">
-    <table ng-table="deployc.tableParams" class="table table-bordered table-responsive" show-filter="true">
-      <tr ng-repeat="c in $data ">
-        <td title="'Path'">{{c.path}}</td>
-        <td title="'Mode'">{{c.mode}}</td>
-        <td title="'Type'">{{c.type}}</td>
-        <td title="'Size'">{{c.size}}</td>
-        <td title="'Url'">{{c.url}}</td>
-        <td title="'Sha'">{{c.sha}}<</td>
-      </tr>
-    </table>
-  </div>
   <div class="row">
-  
-    <div
-      data-angular-treeview="true"
-      data-tree-model="newTree"
-      data-node-label="name"
-      data-node-children="children"
-    >
+    <div class="col-sm-12">
+      
+        <pre class="panel-body">
+
+{{yaml | json}}
+
+        </pre>
+      
     </div>
   </div>
 </section>
