Hide space for code when empty

--- a/views/store.html
+++ b/views/store.html
@@ -29,7 +29,7 @@
         </div>
       
     </div>
-    <div class="col-sm-6">
+    <div class="col-sm-6" ng-show="yaml.content">
       <pre><code>{{yaml.content | json}}</code></pre>
     </div>
   </div>
