Store controller and store view relocated

--- a/views/k8s/store.html
+++ b/views/k8s/store.html
@@ -13,7 +13,7 @@
    See the License for the specific language governing permissions and
    limitations under the License.
 -->
-<section class="content" ng-controller="deployController as deployc">
+<section class="content" ng-controller="storeController as storec">
 
   
   <div class="row store-container">
