Adding machines feature

--- a/views/header.html
+++ b/views/header.html
@@ -60,6 +60,9 @@
     <a href="#/context"><div class="sidebar-link" data-ng-class="{active:isActive('/context')}">
         <i class="fa fa-file-o"></i>Endpoints
     </div></a>
+    <a href="#/machines"><div class="sidebar-link" data-ng-class="{active:isActive('/machines')}">
+        <i class="fa fa-th"></i>Machines
+    </div></a>
     <a href="#/store"><div class="sidebar-link" data-ng-class="{active:isActive('/store')}" >
         <i class="fa fa-building-o"></i>Store
     </div></a>
