--- a/views/k8s/machines.html
+++ b/views/k8s/machines.html
@@ -13,7 +13,7 @@
    See the License for the specific language governing permissions and
    limitations under the License.
 -->
-<section class="content" ng-controller="machinesController as machinec">
+<section class="content" ng-controller="machineController as machinec">
     <div class="button-row">
         <a ng-click="newMachine=!newMachine"><i class="btn btn-success fa fa-plus"> Create Machine </i></a>
     </div>
@@ -33,20 +33,67 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-4">
-            Digital Ocean
+        <div class="col-sm-3">
+            <div class="panel panel-default">
+                <div class="panel-body"><img class="img-responsive" src="img/digitalocean.svg"/></div>
+                <div class="panel-footer">
+                  <div class="input-group">
+                    <input class="form-control" id="inputMachineName" ng-model="newMachineNameDO" type="string" placeholder="Name" ng-required="true">
+                    <span class="input-group-btn">
+                      <button class="btn" ng-click="createMachine('aws', newMachineNameDO)"><i class="glyphicon glyphicon-ok"> </i></button>
+                    </span>
+                  </div>
+                </div>
+            </div>
         </div>
-        <div class="col-sm-4">
-            AWS
+        <div class="col-sm-3">
+            <div class="panel panel-default">
+                <div class="panel-body"><img class="img-responsive" src="img/aws.svg"/></div>
+                <div class="panel-footer">
+                  <div class="input-group">
+                    <input class="form-control" id="inputMachineName" ng-model="newMachineNameAWS" type="string" placeholder="Name" ng-required="true">
+                    <span class="input-group-btn">
+                      <button class="btn" ng-click="createMachine('aws', newMachineNameAWS)"><i class="glyphicon glyphicon-ok"> </i></button>
+                    </span>
+                  </div>
+                </div>
+            </div>
         </div>
-        <div class="col-sm-4">
-            VirtualBox
+        <div class="col-sm-3">
+            <div class="panel panel-default">
+                <div class="panel-body"><img class="img-responsive" src="img/rackspace.svg" ng-click=""/></div>
+                <div class="panel-footer"  ng-hide="false">
+                  <div class="input-group">
+                    <input class="form-control" id="inputMachineName" ng-model="newMachineNameRackspace" type="string" placeholder="Name" ng-required="true">
+                    <span class="input-group-btn">
+                      <button class="btn" ng-click="createMachine('rackspace', newMachineNameRackspace)"><i class="glyphicon glyphicon-ok"> </i></button>
+                    </span>
+                  </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="panel panel-default">
+                <div class="panel-body"><img class="img-responsive" src="img/virtualbox.png" ng-click=""/></div>
+                <div class="panel-footer"  ng-hide="false">
+                  <div class="input-group">
+                    <input class="form-control" id="inputMachineName" ng-model="newMachineNameVB" type="string" placeholder="Name" ng-required="true">
+                    <span class="input-group-btn">
+                      <button class="btn" ng-click="createMachine('virtualbox', newMachineNameVB)"><i class="glyphicon glyphicon-ok"> </i></button>
+                    </span>
+                  </div>
+                </div>
+            </div>
         </div>
     </div>
 
-    <div class="row table-container" ng-if="machinesReady">
-        <table ng-table="machinec.tableParams" class="table table-bordered table-responsive table-hover" show-filter="true">
-            
-        </table>
+    <div class="row">
+        <br>
+        <div class="col-sm-2" ng-repeat="m in machines track by $index">
+          <div class="panel panel-default" style="background-color: #c6c6c6">
+            <div class="panel-body" style="text-align: center;">{{m}}</div>
+            <div class="panel-footer"><button ng-click="useMachine(m);" class="btn btn-block btn-primary">use</button></div>
+          </div>
+        </div>
     </div>
 </section>
