Spiner for starting machine

--- a/views/k8s/machines.html
+++ b/views/k8s/machines.html
@@ -86,13 +86,14 @@
 
     <div class="row">
         <br>
-        <div class="col-sm-3" ng-repeat="m in machines track by $index">
+        <div class="col-sm-3" ng-repeat="m in data.machines track by $index">
           <div class="panel panel-default">
             <div class="panel-heading" style="text-align: center;">{{m[0]}}</div>
             <div class="panel-body" style="text-align: center;">
-              {{m[2]}} - {{m[3]}}
+              <p>{{m[2]}} - {{m[3]}}</p>
+              <i class="fa fa-refresh fa-spin" ng-show="m[3]==='Starting'" style="font-size:24px"></i>
             </div>
-            <div class="panel-footer">
+            <div class="panel-footer" ng-hide="m[3]==='Starting'">
               <button ng-click="useMachine(m);" class="btn btn-primary" ng-hide="m[4]">activate</button></button><button ng-click="startMachine(m)" class="btn btn-success" ng-show="m[3]==='Stopped'">start</button><button ng-click="stopMachine(m);" class="btn btn-danger" ng-show="m[3]==='Running' && !m[4]">stop</button>
               <button ng-click="deleteMachine(m);" class="btn btn-block btn-danger" ng-show="m[4]">stop</button>
               <button ng-click="deleteMachine(m);" class="btn btn-block btn-dft">delete</button>
