--- a/views/k8s/machines.html
+++ b/views/k8s/machines.html
@@ -91,12 +91,14 @@
             <div class="panel-heading" style="text-align: center;">{{m[0]}}</div>
             <div class="panel-body" style="text-align: center;">
               <p>{{m[2]}} - {{m[3]}}</p>
-              <i class="fa fa-refresh fa-spin" ng-show="m[3]==='Starting'" style="font-size:24px"></i>
+              <i class="fa fa-refresh fa-spin" ng-show="m[3]==='Starting' || m[4]==='Waiting'" style="font-size:24px"></i>
             </div>
-            <div class="panel-footer" ng-hide="m[3]==='Starting'">
-              <button ng-click="useMachine(m);" class="btn btn-primary" ng-hide="m[4]">activate</button></button><button ng-click="startMachine(m)" class="btn btn-success" ng-show="m[3]==='Stopped'">start</button><button ng-click="stopMachine(m);" class="btn btn-danger" ng-show="m[3]==='Running' && !m[4]">stop</button>
-              <button ng-click="deleteMachine(m);" class="btn btn-block btn-danger" ng-show="m[4]">stop</button>
-              <button ng-click="deleteMachine(m);" class="btn btn-block btn-dft">delete</button>
+            <div class="panel-footer" ng-hide="m[3]==='Starting' || m[3]=== 'Error'">
+              <button ng-click="useMachine(m);" class="btn btn-primary" ng-hide="m[4]">activate</button><button ng-click="startMachine(m)" class="btn btn-success" ng-show="m[3]==='Stopped' && !m[4]">start</button><button ng-click="stopMachine(m);" class="btn btn-danger" ng-show="m[3]==='Running' && !m[4]">stop</button><button ng-click="startMachine(m);" class="btn btn-block btn-success" ng-show="m[4]==='Stopped'">start</button><button ng-click="stopMachine(m);" class="btn btn-block btn-danger" ng-show="m[4]=='Running'">stop</button>
+              <button ng-click="deleteMachine(m);" class="btn btn-block">delete</button>
+            </div>
+            <div class="panel-footer" ng-show="m[3]==='Error'">
+              <button ng-click="listMachines();" class="btn btn-block btn-danger">reload machines</button>
             </div>
           </div>
         </div>
